lib/world/sarta/errors

[2019-3-1 16:49:00]
Unexpected token ,
E:\KLF\KMUD\lib\base\Room.js:75
        let __mec = __bfc(this || Room, 'public', 'get indoors', __FILE__, false); try { return get.call(this, Room, 'indoors', 'room/indoors', , false) === true; } finally { __efc(__mec, 'get indoors'); }
                                                                                                                                                ^

SyntaxError: Unexpected token ,
    at require (/world/sarta/Square.jsx:1:201)
